--- a/frontend/src/app/footer/footer.html
+++ b/frontend/src/app/footer/footer.html
@@ -1,7 +1,7 @@
 <footer class="bg-cuatro-dark-bg text-cuatro-gray-text py-5 px-4 px-md-5 border-top border-gray-700">
     <div class="container-fluid max-w-7xl mx-auto">
         <div class="row g-4">
-            
+
             <div class="col-12 col-md-4 col-lg-4">
                 <div class="d-flex align-items-center mb-3">
                     <img src="logo-4v-removebg-preview.png" alt="Cuatrovientos Logo" class="cuatrovientos-logo-footer">
@@ -14,35 +14,55 @@
             <div class="col-6 col-md-2 col-lg-2">
                 <h4 class="text-white fw-bold mb-3 text-uppercase small">Voluntariado</h4>
                 <ul class="list-unstyled small">
-                    <li class="mb-2"><a href="#" class="text-decoration-none text-cuatro-gray-text hover-light-blue">Hacerse Voluntario</a></li>
-                    <li class="mb-2"><a href="#" class="text-decoration-none text-cuatro-gray-text hover-light-blue">Áreas de Impacto</a></li>
-                    <li class="mb-2"><a href="#" class="text-decoration-none text-cuatro-gray-text hover-light-blue">Proyectos Recientes</a></li>
+                    <li class="mb-2"><a href="#"
+                            class="text-decoration-none text-cuatro-gray-text hover-light-blue">Hacerse Voluntario</a>
+                    </li>
+                    <li class="mb-2"><a href="#"
+                            class="text-decoration-none text-cuatro-gray-text hover-light-blue">Áreas de Impacto</a>
+                    </li>
+                    <li class="mb-2"><a href="#"
+                            class="text-decoration-none text-cuatro-gray-text hover-light-blue">Proyectos Recientes</a>
+                    </li>
                 </ul>
             </div>
 
             <div class="col-6 col-md-2 col-lg-2">
                 <h4 class="text-white fw-bold mb-3 text-uppercase small">Organización</h4>
                 <ul class="list-unstyled small">
-                    <li class="mb-2"><a href="#" class="text-decoration-none text-cuatro-gray-text hover-light-blue">Sobre Nosotros</a></li>
-                    <li class="mb-2"><a href="#" class="text-decoration-none text-cuatro-gray-text hover-light-blue">Nuestro Equipo</a></li>
-                    <li class="mb-2"><a href="#" class="text-decoration-none text-cuatro-gray-text hover-light-blue">Contacto</a></li>
+                    <li class="mb-2"><a href="#"
+                            class="text-decoration-none text-cuatro-gray-text hover-light-blue">Sobre Nosotros</a></li>
+                    <li class="mb-2"><a href="#"
+                            class="text-decoration-none text-cuatro-gray-text hover-light-blue">Nuestro Equipo</a></li>
+                    <li class="mb-2"><a href="#"
+                            class="text-decoration-none text-cuatro-gray-text hover-light-blue">Contacto</a></li>
                 </ul>
             </div>
 
             <div class="col-12 col-md-4 col-lg-4">
                 <h4 class="text-white fw-bold mb-3 text-uppercase small">Legal</h4>
                 <ul class="list-unstyled small">
-                    <li class="mb-2"><a href="#" class="text-decoration-none text-cuatro-gray-text hover-light-blue">Aviso Legal</a></li>
-                    <li class="mb-2"><a href="#" class="text-decoration-none text-cuatro-gray-text hover-light-blue">Política de Privacidad</a></li>
-                    <li class="mb-2"><a href="#" class="text-decoration-none text-cuatro-gray-text hover-light-blue">Cookies</a></li>
+                    <li class="mb-2"><a href="#"
+                            class="text-decoration-none text-cuatro-gray-text hover-light-blue">Aviso Legal</a></li>
+                    <li class="mb-2"><a href="#"
+                            class="text-decoration-none text-cuatro-gray-text hover-light-blue">Política de
+                            Privacidad</a></li>
+                    <li class="mb-2"><a href="#"
+                            class="text-decoration-none text-cuatro-gray-text hover-light-blue">Cookies</a></li>
                 </ul>
-                
+
                 <div class="d-flex space-x-4 mt-4">
                     <a href="#" class="text-cuatro-light-blue hover-white me-3">
-                        <svg class="icon-24" fill="currentColor" viewBox="0 0 24 24"></svg>
+                        <svg class="icon-24" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M19 0H5a5 5 0 00-5 5v14a5 5 0 005 5h14a5 5 0 005-5V5a5 5 0 00-5-5zm-3 7h-2v2h2v3h-2v7h-3V12h-2v-3h2V7a3 3 0 013-3h3v3z" />
+                        </svg>
                     </a>
+
                     <a href="#" class="text-cuatro-light-blue hover-white">
-                        <svg class="icon-24" fill="currentColor" viewBox="0 0 24 24"></svg>
+                        <svg class="icon-24" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M22.46 6c-.77.34-1.6.57-2.48.66.88-.53 1.56-1.37 1.88-2.37-.83.5-1.75.85-2.73 1.04C18.3 4.87 17.13 4 15.82 4c-2.37 0-4.31 1.94-4.31 4.31 0 .34.04.67.11.99-3.58-.18-6.75-1.89-8.88-4.48-.37.64-.58 1.37-.58 2.15 0 1.49.76 2.81 1.91 3.59-.7-.02-1.37-.21-1.95-.51v.05c0 2.09 1.49 3.83 3.47 4.22-.36.1-.74.15-1.13.15-.27 0-.53-.03-.78-.08.55 1.72 2.14 2.97 4.02 3.06-1.48 1.16-3.33 1.86-5.36 1.86-.35 0-.7-.02-1.04-.06 1.92 1.23 4.19 1.95 6.64 1.95 8 0 12.44-6.64 12.44-12.44 0-.19-.01-.39-.01-.58.85-.62 1.58-1.4 2.17-2.31z" />
+                        </svg>
                     </a>
                 </div>
             </div>
