Modal de login añadido

--- a/frontend/src/app/header/header.html
+++ b/frontend/src/app/header/header.html
@@ -3,7 +3,7 @@
         
         <a class="navbar-brand d-flex align-items-center me-auto" href="#">
             <img src="logo-4v-removebg-preview.png" alt="Cuatrovientos Logo" class="cuatrovientos-logo-header">
-            <span class="ms-2 fs-4 fw-bolder text-uppercase" 
+            <span class="ms-2 fs-4 font-max-bold text-uppercase" 
                   style="color: var(--color-cuatrovientos-main-blue);">
                 CUATROVIENTOS
             </span>
@@ -16,7 +16,7 @@
                 Iniciar Sesión
             </button>
             
-            <button class="btn btn-primary shadow-sm px-4 py-2 rounded-lg"
+            <button class="btn btn-primary fw-bold shadow-sm px-4 py-2 rounded-lg"
                     (click)="openRegister()"
                     style="background-color: var(--color-cuatrovientos-main-blue); border-color: var(--color-cuatrovientos-main-blue);">
                 Regístrate
