--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,3 +1,9 @@
-<app-header></app-header>
+<app-header (onHeaderClick)="openModal('login')"></app-header>
 <app-home-page></app-home-page>
 <app-footer></app-footer>
+<div *ngIf="isModalOpen"
+    class="fixed inset-0 bg-black bg-opacity-50 z-40 d-flex align-items-center justify-content-center modal-overlay-container"
+    (click)="closeOnOverlayClick($event)">
+
+    <app-modal-login (onModalClick)="closeModal()"></app-modal-login>
+</div>
