--- a/frontend/src/app/footer/footer.html
+++ b/frontend/src/app/footer/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-cuatro-dark-bg text-cuatro-gray-text py-5 px-4 px-md-5 border-top border-gray-700">
+<footer class="bg-cuatro-dark-bg text-cuatro-gray-text py-5 px-4 px-md-5">
     <div class="container-fluid max-w-7xl mx-auto">
         <div class="row g-4">
 
@@ -68,7 +68,7 @@
             </div>
         </div>
 
-        <div class="mt-4 pt-3 border-top border-gray-700 text-center small">
+        <div class="mt-4 pt-3 border-top border-gray-100 text-center small">
             <p>&copy; 2024 Cuatrovientos. Todos los derechos reservados.</p>
         </div>
     </div>
