--- a/frontend/src/app/home-page/home-page.html
+++ b/frontend/src/app/home-page/home-page.html
@@ -1,10 +1,11 @@
+
 <section class="hero-section text-cuatro-main-blue px-4 px-md-5">
     <div class="container-fluid py-5">
         <div class="row align-items-center justify-content-between">
             
             <div class="col-12 col-md-6 py-5">
-                <h1 class="display-1 fw-bolder lh-1 mb-3">
-                    <span class="d-block">VOLUNTARIADO</span>
+                <h1 class="display-1 font-max-bold lh-1 mb-3">
+                    <span class="d-block" style="color: var(--color-cuatrovientos-main-blue);">VOLUNTARIADO</span>
                     <span class="d-block" style="color: var(--color-cuatrovientos-main-blue);">CON IMPACTO.</span>
                 </h1>
                 <p class="fs-4 text-secondary max-w-lg mb-4">
@@ -27,7 +28,7 @@
 <section class="evolution-section py-5 py-md-5 px-4 px-md-5"
     style="background-color: var(--color-cuatrovientos-main-blue);">
     <div class="container-fluid text-center">
-        <h2 class="evolution-section-h2 display-2 fw-bolder tracking-tight">
+        <h2 class="evolution-section-h2 display-2 font-max-bold tracking-tight">
             CENTRO EN EVOLUCIÓN
         </h2>
     </div>
@@ -47,7 +48,7 @@
         <div class="row align-items-center">
             
             <div class="col-12 col-md-6 pe-md-5">
-                <h2 class="display-4 fw-bolder lh-sm mb-4 text-white">
+                <h2 class="display-4 font-max-bold lh-sm mb-4 text-white">
                     SOMOS LA ENERGÍA <br> DEL CAMBIO.
                 </h2>
                 <p class="fs-5 text-cuatro-gray-text mb-4">
@@ -77,7 +78,7 @@
 </section>
 <section class="py-5 py-md-5 bg-light-gray-bg text-cuatro-main-blue px-4 px-md-5">
     <div class="container-fluid max-w-7xl mx-auto">
-        <h2 class="fs-2 fw-bolder text-dark mb-3">Áreas de Impacto</h2>
+        <h2 class="fs-2 font-max-bold text-dark mb-3">Áreas de Impacto</h2>
         <p class="fs-5 text-secondary max-w-2xl mb-5">
             Trabajamos en frentes esenciales para el desarrollo comunitario, apoyando a quienes más lo necesitan.
         </p>
@@ -150,7 +151,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-9">
                 
-                <h2 class="display-3 display-md-1 fw-bolder text-white mb-3">
+                <h2 class="display-3 display-md-1 font-max-bold text-white mb-3">
                     ÚNETE A NUESTRO PRÓXIMO EVENTO
                 </h2>
                 
@@ -175,8 +176,8 @@
     <div class="container-fluid py-5">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-8">
-                <h2 class="display-2 fw-bolder mb-3 text-white">¿Tienes una idea?</h2>
-                <h2 class="display-2 fw-bolder text-white mb-4">Hablemos.</h2>
+                <h2 class="display-2 font-max-bold mb-3 text-white">¿Tienes una idea?</h2>
+                <h2 class="display-2 font-max-bold text-white mb-4">Hablemos.</h2>
                 
                 <p class="fs-5 fs-md-4 text-white mb-5 mx-auto max-w-2xl">
                     Tu visión de voluntariado puede ser el próximo gran impacto. Conectamos tu pasión con las necesidades de
