Abrir modales desde header y login funcionando

--- a/frontend/src/app/home-page/home-page.html
+++ b/frontend/src/app/home-page/home-page.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="col-12 col-md-6 d-none d-md-flex align-items-center justify-content-center position-relative">
-                <svg class="concentric-target-graphic" fill="currentColor">
+                <svg class="concentric-target-graphic" fill="blue">
                     <use href="#concentric-target-svg" />
                 </svg>
             </div>
