--- a/frontend/src/app/modal-login/modal-login.html
+++ b/frontend/src/app/modal-login/modal-login.html
@@ -40,13 +40,13 @@
 
     <div class="text-center mt-4">
         <p class="text-secondary small mb-3">¿No tienes una cuenta? - Regístrate</p>
-        <div class="d-flex justify-content-center space-x-3">
+        <div class="d-flex justify-content-center space-x-3 p-3">
 
             <button (click)="openVolunteerRegister()"
-                class="btn btn-outline-secondary btn-sm px-3 rounded-lg hover-bg-gray-50">Registro Voluntario</button>
+                class="btn btn-outline-secondary btn-sm px-3 rounded-lg hover-bg-gray-50 mx-1">Registro Voluntario</button>
 
             <button (click)="openOrgRegister()"
-                class="btn btn-outline-secondary btn-sm px-3 rounded-lg hover-bg-gray-50">Nueva Organización</button>
+                class="btn btn-outline-secondary btn-sm px-3 rounded-lg hover-bg-gray-50 mx-1">Nueva Organización</button>
         </div>
         <p class="small mt-3"><a href="#" class="text-decoration-none text-primary">Learn user licence agreement</a></p>
     </div>
